--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,13 @@ test: &test
   <<: *default
   database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
 
 cucumber:
   <<: *test
+
+
+production:
+  adapter: postgresql
+  database: name_of_your_db
+  pool: 5
+  timeout: 5000
